@@ -1,3 +1,7 @@
+[B]Version 1.17.3[/B]
+
+- Fix uninitialized variable on streams that haven't started yet.
+
 [B]Version 1.17.2[/B]
 
 - Fix international game issues
